--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
+    <meta http-equiv="Cashe-Control" content="max-age=86400, must-revalidate" />
+    <meta http-equiv="Cashe-Control" content="max-age=86400, proxy-revalidate" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="Сайт под ключ. Оптимальные цены. Разумные сроки." />
+    <meta name="author" content="Сергей Медведкин" />	      
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Веб-разработка: сайты и приложения. Сергей Медведкин</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
